name:                language-slugs
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Trevor Elliott
maintainer:          trevor@galois.com
-- copyright:           
category:            Language
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Language.Slugs.AST
                       Language.Slugs.Lens
                       Language.Slugs.PP
                       Language.Slugs.Simplify
  build-depends:       base >=4.8 && <4.9,
                       pretty
  hs-source-dirs:      src
  default-language:    Haskell2010
