name:                language-slugs
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Trevor Elliott
maintainer:          trevor@galois.com
-- copyright:           
category:            Language
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Language.Slugs
                       Language.Slugs.AST
                       Language.Slugs.Lens
                       Language.Slugs.PP
                       Language.Slugs.Run
                       Language.Slugs.Simplify
  other-modules:       Language.Slugs.CSE
  build-depends:       base >=4.8 && <5,
                       pretty,
                       containers,
                       monadLib >= 3.7.3,
                       aeson,
                       attoparsec,
                       bytestring,
                       text,
                       process,
                       process-extras,
                       directory,
                       unordered-containers
  hs-source-dirs:      src
  default-language:    Haskell2010

  ghc-options:         -Wall
